# bhagwanbharose

./: README.md  dlib_error.txt  pyproject.toml  requirements.txt  scraper.py
backend/: db.py  main.py
frontend/: app.css  app.html  leaderboard.css  leaderboard.html  login.css  login.html  test.html
utils/: facial_recognition_module.py
